Fixed tangents and image distortion on 07

--- a/07advanced-css/stylesheet.css
+++ b/07advanced-css/stylesheet.css
@@ -86,6 +86,7 @@ main ul li {
 
 .reviewhero img {
     width: 100%;
+    height: auto;
 }
 
 div.upcominggall {
